@@ -1,5 +1,6 @@
 2.3.6
 [fix] change import from absolute to relative
+[upd] re-write of search history
 
 2.3.5
 [fix] utf-8 file paths
